@@ -2,15 +2,17 @@ package com.example.crudproject.service.impl;
 
 import com.example.crudproject.dto.PersonDto;
 import com.example.crudproject.entity.PersonEntity;
+import com.example.crudproject.mapper.PersonMapper;
 import com.example.crudproject.repository.PersonRepository;
 import com.example.crudproject.service.PersonService;
 import lombok.RequiredArgsConstructor;
+import org.mapstruct.factory.Mappers;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -18,25 +20,30 @@ import java.util.Optional;
 public class PersonServiceImpl implements PersonService {
 
     private final PersonRepository personRepository;
+    private PersonMapper personMapper = Mappers.getMapper(PersonMapper.class);
 
     @Override
     public PersonDto save(PersonDto personDto) {
-        PersonEntity personEntity = personRepository.save(PersonEntity.of(personDto));
-        return PersonDto.of(personEntity);
+        PersonEntity personEntity = personRepository.save(personMapper.personDtoToPersonEntity(personDto));
+        return personMapper.personEntityToPersonDto(personEntity);
     }
 
     @Override
     public PersonDto get(Long id) {
         return personRepository.findById(id)
-                .map(PersonDto::of)
+                .map(personEntity -> {
+                    return personMapper.personEntityToPersonDto(personEntity);
+                })
                 .orElseThrow(() -> new NoSuchElementException(id + ": not found"));
     }
 
     @Override
     public List<PersonDto> getAll() {
         return personRepository.findAll().stream()
-                .map(PersonDto::of)
-                .toList();
+                .map(personEntity -> {
+                    return personMapper.personEntityToPersonDto(personEntity);
+                })
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -44,14 +51,10 @@ public class PersonServiceImpl implements PersonService {
         PersonEntity personEntity = personRepository.findById(id)
                 .orElseThrow(() -> new NoSuchElementException(id + ": not found"));
 
-        // mapping kullanılacak
-        personEntity.setName(newPersonDto.getName());
-        personEntity.setSurname(newPersonDto.getSurname());
-        personEntity.setAge(newPersonDto.getAge());
-        personEntity.setCity(newPersonDto.getCity());
-        personEntity.setIsStudent(newPersonDto.getIsStudent());
+        personMapper.updatePersonFromDto(newPersonDto, personEntity);
+        personRepository.save(personEntity);
 
-        return PersonDto.of(personEntity);
+        return personMapper.personEntityToPersonDto(personEntity);
     }
 
     @Override
@@ -64,8 +67,10 @@ public class PersonServiceImpl implements PersonService {
     @Override
     public List<PersonDto> getByCity(String city) {
         return personRepository.findByCity(city).stream()
-                .map(PersonDto::of)
-                .toList();
+                .map(personEntity -> {
+                    return personMapper.personEntityToPersonDto(personEntity);
+                })
+                .collect(Collectors.toList()); // incele anlamaya calıs
     }
 
 }
